--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Monish | Portfolio</title>
+  <title>Portfolio</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
@@ -80,7 +80,7 @@
       <div class="project-card">
         <h3>Portfolio Website</h3>
         <p>Responsive portfolio using HTML & CSS.</p>
-        <a href="#">View Project</a>
+        <a href="https://monishkoushal.github.io/Portfolio/" target="_blank">View Project</a>
       </div>
 
       <div class="project-card">
@@ -120,4 +120,5 @@
   </section>
 
 </body>
+
 </html>
